# UrlRedirect-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.docker/: config.toml  db.toml
.github/workflows/: docker.yml
src/: admin.html  admin.rs  config.rs  db.rs  error.rs  main.rs  redirect.rs  stats.rs  status.rs
static/: 404.html  redirect.html
