[package]
name = "url-redirect"
version = "0.3.1"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["web"]
categories = ["network-programming", "web-programming", "web-programming::http-server"]
description = "`url-redirect` is a trivial, headless URL redirection service"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/UrlRedirect-rust"
readme = "README.md"


[[bin]]
name = "url-redirect"
path = "src/main.rs"


[badges]
appveyor = { repository = "KizzyCode/UrlRedirect-rust" }


[features]
default = []


[dependencies]
ehttpd = { version = "0.10.0", default-features = false, features = ["server"] }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde", "std"] }


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
